[package]
name = "acheberescue"
version = "0.1.0"
authors = ["Josh Hansen <hansen.joshuaa@gmail.com>"]

[dependencies]
clap = "2.28.0"
cv = { path = "cv-rs" }
rand = "0.3.18"

# [[bin]]
# name = "infil"
# path = "src/infil.rs"
#
# [[bin]]
# name = "exfil"
# path = "src/exfil.rs"

[[bin]]
name = "fil"
path = "src/main.rs"
